--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <title>MyPortfolio</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <script async src=//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js></script>
+
+  <!-- <script data-ad-client="ca-pub-3153004667560334" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3153004667560334" crossorigin="anonymous"></script> -->
 </head>
 <body>
   <app-root></app-root>
